tests/machine/x/go/group_by_conditional_sum.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/group_by_conditional_sum.go:17:13: undefined: Item
../../../tests/machine/x/go/group_by_conditional_sum.go:21:5: undefined: Item
../../../tests/machine/x/go/group_by_conditional_sum.go:25:5: undefined: Item
../../../tests/machine/x/go/group_by_conditional_sum.go:30:21: undefined: Result
../../../tests/machine/x/go/group_by_conditional_sum.go:88:16: undefined: Result
../../../tests/machine/x/go/group_by_conditional_sum.go:90:30: undefined: Result

1: //go:build ignore
